Make some changes

--- a/index.html
+++ b/index.html
@@ -364,108 +364,315 @@
               <div style="overflow-y: auto;">
                 <table class="table table-under-bordered">
                   <tbody>
-                      <tr>
-                        <th>Order No</th>
-                        <th>Customer ID</th>
-                        <th>Customer Phone</th>
-                        <th>Invoice No</th>
-                        <th>Product ID</th>
-                        <th>Color</th>
-                        <th>Size</th>
-                        <th>Total</th>
-                        <th>Order Date</th>
-                        <th>Payment Method</th>
-                        <th>Status</th>
-                        <th colspan="2">Action</th>
-                      </tr>
-                      <tr>
-                        <td>1</td>
-                        <td>27</td>
-                        <td>01944667441</td>
-                        <td>X2DY435</td>
-                        <td>A37M</td>
-                        <td>Red</td>
-                        <td>XXL</td>
-                        <td>1000 Tk</td>
-                        <td>12-2-2025</td>
-                        <td>Cash On Delivery</td>
-                        <td class="text-success">Pending</td>
-                        <td>
-                          <button class="btn btn-dark">Accept</button>
-                        </td>
-                        <td>
-                          <button class="btn btn-danger">Delete</button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>2</td>
-                        <td>27</td>
-                        <td>01944667441</td>
-                        <td>X2DY435</td>
-                        <td>A37M</td>
-                        <td>Red</td>
-                        <td>XXL</td>
-                        <td>1000 Tk</td>
-                        <td>12-2-2025</td>
-                        <td>Cash On Delivery</td>
-                        <td class="text-danger">Canceled</td>
-                        <td class="text-muted">Not Available</td>
-                        <td>
-                          <button class="btn btn-danger">Delete</button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>3</td>
-                        <td>27</td>
-                        <td>01944667441</td>
-                        <td>X2DY435</td>
-                        <td>A37M</td>
-                        <td>Red</td>
-                        <td>XXL</td>
-                        <td>1000 Tk</td>
-                        <td>12-2-2025</td>
-                        <td>Cash On Delivery</td>
-                        <td class="text-success">Processing</td>
-                        <td class="text-muted">Not Available</td>
-                        <td>
-                          <button class="btn btn-danger">Delete</button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>4</td>
-                        <td>27</td>
-                        <td>01944667441</td>
-                        <td>X2DY435</td>
-                        <td>A37M</td>
-                        <td>Red</td>
-                        <td>XXL</td>
-                        <td>1000 Tk</td>
-                        <td>12-2-2025</td>
-                        <td>Cash On Delivery</td>
-                        <td class="text-success">Shipped</td>
-                        <td class="text-muted">Not Available</td>
-                        <td>
-                          <button class="btn btn-danger">Delete</button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>5</td>
-                        <td>27</td>
-                        <td>01944667441</td>
-                        <td>X2DY435</td>
-                        <td>A37M</td>
-                        <td>Red</td>
-                        <td>XXL</td>
-                        <td>1000 Tk</td>
-                        <td>12-2-2025</td>
-                        <td>Cash On Delivery</td>
-                        <td class="text-success">Completed</td>
-                        <td class="text-muted">Not Available</td>
-                        <td>
-                          <button class="btn btn-danger">Delete</button>
-                        </td>
-                      </tr>
-                  </tbody>
+                    <tr>
+                      <th>Order No</th>
+                      <th>Customer ID</th>
+                      <th>Customer Phone</th>
+                      <th>Invoice No</th>
+                      <th>Product ID</th>
+                      <th>Color</th>
+                      <th>Size</th>
+                      <th>Quantity</th>
+                      <th>Total</th>
+                      <th>Order Date</th>
+                      <th>Payment Method</th>
+                      <th>Status</th>
+                      <th colspan="2">Action</th>
+                    </tr>
+                    <tr>
+                      <td>101</td>
+                      <td>27</td>
+                      <td>01944667441</td>
+                      <td>X2DY435</td>
+                      <td>A37M</td>
+                      <td>Red</td>
+                      <td>XXL</td>
+                      <td>4</td>
+                      <td>1000 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Cash On Delivery</td>
+                      <td class="text-success">Pending</td>
+                      <td>
+                        <button class="btn btn-dark">Accept</button>
+                      </td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>102</td>
+                      <td>27</td>
+                      <td>01944667441</td>
+                      <td>X2DY435</td>
+                      <td>A38NS</td>
+                      <td>Blue</td>
+                      <td>M</td>
+                      <td>2</td>
+                      <td>600 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Cash On Delivery</td>
+                      <td class="text-danger">Canceled</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>104</td>
+                      <td>28</td>
+                      <td>01944667225</td>
+                      <td>X2DZA436</td>
+                      <td>A35B</td>
+                      <td>Black</td>
+                      <td>L</td>
+                      <td>4</td>
+                      <td>2000 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Cash On Delivery</td>
+                      <td class="text-success">Processing</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>105</td>
+                      <td>28</td>
+                      <td>01944667225</td>
+                      <td>X2DZA436</td>
+                      <td>A31M</td>
+                      <td>White</td>
+                      <td>XL</td>
+                      <td>3</td>
+                      <td>1500 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Cash On Delivery</td>
+                      <td class="text-success">Processing</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>110</td>
+                      <td>31</td>
+                      <td>01714564267</td>
+                      <td>A7HBL83</td>
+                      <td>T48</td>
+                      <td>Red</td>
+                      <td>S</td>
+                      <td>1</td>
+                      <td>900 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Cash On Delivery</td>
+                      <td class="text-danger">Canceled</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>114</td>
+                      <td>35</td>
+                      <td>01544677441</td>
+                      <td>AB2DY435</td>
+                      <td>A37M</td>
+                      <td>Red</td>
+                      <td>XXL</td>
+                      <td>3</td>
+                      <td>1200 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Cash On Delivery</td>
+                      <td class="text-success">Shipped</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>115</td>
+                      <td>40</td>
+                      <td>01780667461</td>
+                      <td>X2DY430</td>
+                      <td>B35M</td>
+                      <td>Purple</td>
+                      <td>M</td>
+                      <td>5</td>
+                      <td>2500 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Cash On Delivery</td>
+                      <td class="text-success">Completed</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <!---->
+                    <tr>
+                      <td>201</td>
+                      <td>127</td>
+                      <td>01944667441</td>
+                      <td>7X2DY435</td>
+                      <td>A37M</td>
+                      <td>Red</td>
+                      <td>XXL</td>
+                      <td>4</td>
+                      <td>1000 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>bKash</td>
+                      <td class="text-success">Pending</td>
+                      <td>
+                        <button class="btn btn-dark">Accept</button>
+                      </td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>202</td>
+                      <td>127</td>
+                      <td>01944667441</td>
+                      <td>7X2DY435</td>
+                      <td>A38NS</td>
+                      <td>Blue</td>
+                      <td>M</td>
+                      <td>2</td>
+                      <td>600 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>bKash</td>
+                      <td class="text-danger">Canceled</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>204</td>
+                      <td>128</td>
+                      <td>01944667225</td>
+                      <td>U84HSNI9</td>
+                      <td>A35B</td>
+                      <td>Black</td>
+                      <td>L</td>
+                      <td>4</td>
+                      <td>2000 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>bKash</td>
+                      <td class="text-success">Processing</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>205</td>
+                      <td>128</td>
+                      <td>01944667225</td>
+                      <td>U84HSNI9</td>
+                      <td>A31M</td>
+                      <td>White</td>
+                      <td>XL</td>
+                      <td>3</td>
+                      <td>1500 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>bKash</td>
+                      <td class="text-success">Processing</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>210</td>
+                      <td>171</td>
+                      <td>01470364781</td>
+                      <td>B7HBL83</td>
+                      <td>T48</td>
+                      <td>Red</td>
+                      <td>S</td>
+                      <td>1</td>
+                      <td>900 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Upay</td>
+                      <td class="text-danger">Canceled</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>206</td>
+                      <td>228</td>
+                      <td>01714564267</td>
+                      <td>M7GB83IS</td>
+                      <td>A35B</td>
+                      <td>Black</td>
+                      <td>L</td>
+                      <td>4</td>
+                      <td>2000 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Nagad</td>
+                      <td class="text-success">Processing</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>207</td>
+                      <td>228</td>
+                      <td>01714564267</td>
+                      <td>M7GB83IS</td>
+                      <td>A31M</td>
+                      <td>White</td>
+                      <td>XL</td>
+                      <td>3</td>
+                      <td>1500 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Nagad</td>
+                      <td class="text-success">Processing</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>214</td>
+                      <td>135</td>
+                      <td>01544677441</td>
+                      <td>P749CHB93</td>
+                      <td>A37M</td>
+                      <td>Red</td>
+                      <td>XXL</td>
+                      <td>3</td>
+                      <td>1200 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>bKash</td>
+                      <td class="text-success">Shipped</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>215</td>
+                      <td>140</td>
+                      <td>01780667461</td>
+                      <td>V749HFK2</td>
+                      <td>B35M</td>
+                      <td>Purple</td>
+                      <td>M</td>
+                      <td>5</td>
+                      <td>2500 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Rocket</td>
+                      <td class="text-success">Completed</td>
+                      <td class="text-muted">Not Available</td>
+                      <td>
+                        <button class="btn btn-danger">Delete</button>
+                      </td>
+                    </tr>
+                </tbody>
                </table>
               </div>
             </div>
