--- a/makeInvoice.html
+++ b/makeInvoice.html
@@ -323,8 +323,9 @@
                 <table class="table table-under-bordered">
                   <tbody>
                       <tr>
-                        <th>Order No</th>
+                        <th>Serial No</th>
                         <th>Invoice No</th>
+                        <th>Order No</th>
                         <th>Order Status</th>
                         <th>Payment Method</th>
                         <th>Invoice List</th>
@@ -333,8 +334,9 @@
                         <th>Canceled</th>
                       </tr>
                       <tr>
-                        <th>1</th>
-                        <td>X89T07XH</td>
+                        <td>1</td>
+                        <td>X2DZA436</td>
+                        <td>104, 105</td>
                         <td class="text-success">Processing</td>
                         <td>Cash On Delivery</td>
                         <td><button class="btn btn-dark">See Invoice</button></td>
@@ -343,8 +345,9 @@
                         <td><button class="btn btn-danger">Mark As Cancel</button></td>
                       </tr>
                       <tr>
-                        <th>2</th>
-                        <td>X89T07XH</td>
+                        <td>2</td>
+                        <td>A7HBL83</td>
+                        <td>110</td>
                         <td class="text-danger">Canceled</td>
                         <td>Cash On Delivery</td>
                         <td class="text-muted">Not Found</td>
@@ -353,8 +356,9 @@
                         <td class="text-muted">Not Available</td>
                       </tr>
                       <tr>
-                        <th>3</th>
-                        <td>X89T07XH</td>
+                        <td>3</td>
+                        <td>AB2DY435</td>
+                        <td>114</td>
                         <td class="text-success">Shipped</td>
                         <td>Cash On Delivery</td>
                         <td><button class="btn btn-dark">See Invoice</button></td>
@@ -363,8 +367,9 @@
                         <td><button class="btn btn-danger">Mark As Cancel</button></td>
                       </tr>
                       <tr>
-                        <th>4</th>
-                        <td>X89T07XH</td>
+                        <td>4</td>
+                        <td>X2DY430</td>
+                        <td>115</td>
                         <td class="text-success">Completed</td>
                         <td>Cash On Delivery</td>
                         <td><button class="btn btn-dark">See Invoice</button></td>
@@ -387,8 +392,9 @@
                   <table class="table table-under-bordered">
                     <tbody>
                         <tr>
-                          <th>Order No</th>
+                          <th>Serial No</th>
                           <th>Invoice No</th>
+                          <th>Order No</th>
                           <th>Order Status</th>
                           <th>Payment Method</th>
                           <th>Invoice List</th>
@@ -397,8 +403,9 @@
                           <th>Canceled</th>
                         </tr>
                         <tr>
-                          <th>1</th>
+                          <td>1</td>
                           <td>X89T07XH</td>
+                          <td>1, 2, 3</td>
                           <td class="text-success">Processing</td>
                           <td>bKash</td>
                           <td><button class="btn btn-dark">See Invoice</button></td>
@@ -407,8 +414,9 @@
                           <td><button class="btn btn-danger">Mark As Cancel</button></td>
                         </tr>
                         <tr>
-                          <th>2</th>
+                          <td>2</td>
                           <td>X89T07XH</td>
+                          <td>4, 5</td>
                           <td class="text-danger">Canceled</td>
                           <td>Nagad</td>
                           <td class="text-muted">Not Found</td>
@@ -417,8 +425,9 @@
                           <td class="text-muted">Not Available</td>
                         </tr>
                         <tr>
-                          <th>3</th>
+                          <td>3</td>
                           <td>X89T07XH</td>
+                          <td>6</td>
                           <td class="text-success">Shipped</td>
                           <td>Rocket</td>
                           <td><button class="btn btn-dark">See Invoice</button></td>
@@ -427,8 +436,9 @@
                           <td><button class="btn btn-danger">Mark As Cancel</button></td>
                         </tr>
                         <tr>
-                          <th>4</th>
+                          <td>4</td>
                           <td>X89T07XH</td>
+                          <td>7, 8, 9, 10</td>
                           <td class="text-success">Completed</td>
                           <td>Upay</td>
                           <td><button class="btn btn-dark">See Invoice</button></td>
