--- a/purchaseHistory.html
+++ b/purchaseHistory.html
@@ -314,6 +314,40 @@
             
             <div class="row">
               <h1>Purchase History</h1>
+              <div style="overflow-y: auto;">
+                <table class="table table-under-bordered">
+                  <tbody>
+                    <tr>
+                      <th>Order No</th>
+                      <th>Customer ID</th>
+                      <th>Customer Phone</th>
+                      <th>Invoice No</th>
+                      <th>Product ID</th>
+                      <th>Color</th>
+                      <th>Size</th>
+                      <th>Quantity</th>
+                      <th>Total</th>
+                      <th>Order Date</th>
+                      <th>Payment Method</th>
+                      <th>Action</th>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>27</td>
+                      <td>01944667441</td>
+                      <td>X2DY435</td>
+                      <td>A37M</td>
+                      <td>Red</td>
+                      <td>XXL</td>
+                      <td>4</td>
+                      <td>1000 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Cash On Delivery</td>
+                      <td><button class="btn btn-danger">Delete</button></td>
+                    </tr>
+                </tbody>
+               </table>
+              </div>
             </div>
 
           </div>
