--- a/viewOrders.html
+++ b/viewOrders.html
@@ -325,6 +325,7 @@
                       <th>Product ID</th>
                       <th>Color</th>
                       <th>Size</th>
+                      <th>Quantity</th>
                       <th>Total</th>
                       <th>Order Date</th>
                       <th>Payment Method</th>
@@ -339,6 +340,7 @@
                       <td>A37M</td>
                       <td>Red</td>
                       <td>XXL</td>
+                      <td>4</td>
                       <td>1000 Tk</td>
                       <td>12-2-2025</td>
                       <td>Cash On Delivery</td>
@@ -358,6 +360,7 @@
                       <td>A37M</td>
                       <td>Red</td>
                       <td>XXL</td>
+                      <td>4</td>
                       <td>1000 Tk</td>
                       <td>12-2-2025</td>
                       <td>Cash On Delivery</td>
@@ -375,6 +378,7 @@
                       <td>A37M</td>
                       <td>Red</td>
                       <td>XXL</td>
+                      <td>4</td>
                       <td>1000 Tk</td>
                       <td>12-2-2025</td>
                       <td>Cash On Delivery</td>
@@ -392,6 +396,7 @@
                       <td>A37M</td>
                       <td>Red</td>
                       <td>XXL</td>
+                      <td>4</td>
                       <td>1000 Tk</td>
                       <td>12-2-2025</td>
                       <td>Cash On Delivery</td>
@@ -409,6 +414,7 @@
                       <td>A37M</td>
                       <td>Red</td>
                       <td>XXL</td>
+                      <td>4</td>
                       <td>1000 Tk</td>
                       <td>12-2-2025</td>
                       <td>Cash On Delivery</td>
@@ -424,8 +430,8 @@
             </div>
 
             <br>
-            <a href="viewOrders.html">
-              <button class="btn btn-dark">See All Active Orders</button>
+            <a href="#">
+              <button class="btn btn-dark">Delete All Active Orders <span class="mdi mdi-delete"></span></button>
             </a>
           </div>
           <!--------------------------->
