--- a/viewPayments.html
+++ b/viewPayments.html
@@ -335,8 +335,11 @@
                       </tr>
                       <tr>
                         <td>1</td>
-                        <td>X7Y328M</td>
-                        <td>4</td>
+                        <td>U84HSNI9</td>
+                        <td>
+                          204<br><br>
+                          205
+                        </td>
                         <td class="text-success">Processing</td>
                         <td>bKash</td>
                         <td>01556602995</td>
@@ -348,7 +351,11 @@
                       <tr>
                         <td>2</td>
                         <td>X7Y328M</td>
-                        <td>4</td>
+                        <td>
+                          110<br><br>
+                          111<br><br>
+                          112
+                        </td>
                         <td class="text-success">Processing</td>
                         <td>bKash</td>
                         <td>01556602995</td>
@@ -360,7 +367,11 @@
                       <tr>
                         <td>3</td>
                         <td>X7Y328M</td>
-                        <td>4</td>
+                        <td>
+                          110<br><br>
+                          111<br><br>
+                          112
+                        </td>
                         <td class="text-success">Shipped</td>
                         <td>bKash</td>
                         <td>01556602995</td>
@@ -372,7 +383,11 @@
                       <tr>
                         <td>4</td>
                         <td>X7Y328M</td>
-                        <td>4</td>
+                        <td>
+                          110<br><br>
+                          111<br><br>
+                          112
+                        </td>
                         <td class="text-danger">Canceled</td>
                         <td>bKash</td>
                         <td>01556602995</td>
@@ -384,7 +399,11 @@
                       <tr>
                         <td>5</td>
                         <td>X7Y328M</td>
-                        <td>4</td>
+                        <td>
+                          110<br><br>
+                          111<br><br>
+                          112
+                        </td>
                         <td class="text-success">Completed</td>
                         <td>bKash</td>
                         <td>01556602995</td>
